[package]
name = "nasus"
version = "0.1.0"
edition = "2021"
description = "nasus is a blazing fast osu BanchoBot handler 📬"
repository = "https://github.com/AuracleTech/nasus/"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
peace-performance = "0.4.0"
reqwest = "0.11.14"
futures = "0.3"

[dev-dependencies]
dotenv = "0.15.0"
