[package]
name = "nasus"
version = "0.2.1"
edition = "2021"
description = "nasus is a blazing fast osu BanchoBot handler 📬"
repository = "https://github.com/AuracleTech/nasus/"
license = "MIT"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3"

[dev-dependencies]
dotenv = "0.15.0"
